--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Drinking beer.
-- description: Grand Funk Railroad.
-- description: Flanders' lawnmower.
+- description: Outdoor enthusiast & Vice President of the Marquette Rock Climbing Club
+#- description: Grand Funk Railroad.
+#- description: Flanders' lawnmower.
