--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
+- url: "http://www.dejazzer.com/students.html"
+  description: Marquette Embedded SystemS Lab
 - url: "#"
-  description: Springfield Poker Club
-- url: "#"
-  description: Springfield Donut Eater's User Group
+  description: PDF Resume!!!
