--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,26 @@
 # Jobs
 # Springfield Nuclear Power Plant
-- company: Springfield Nuclear Power Plant
-  position: Safety Inspector
-  duration: Nov, 1980 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
+- company: Marquette Embedded SystemS Lab
+  position: Undergraduate Researcher
+  duration: Jun, 2017 &mdash; present
+  summary:  <ul class="resume-item-list">
+              <li>Designed and implemented a parallelized version of the Viola-Jones Computer Vision Algorithm</li>
+              <li>Attaining in-depth knowledge of the C++ and Cuda languages</li>
+            </ul>
 
 # Windmill Crank Operator
-- company: Sir Putt-A-Lot's Merrie Olde Fun Centre
-  position: Safety Inspector
-  duration:  Jun, 1978 &mdash; Sept, 1979
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
+- company: Siemens Healthineers Co-Op
+  position: Software Installation / Development 
+  duration: Jan, &mdash; Dec, 2016
+  summary: <ul class="resume-item-list">
+              <li>Utilized Microsoft’s WPF in C#/XAML to develop tools</li>
+              <li>Used TFS to branch/merge migrations and manage builds for installations</li>
+              <li>Assisted Developers to design and implement backend and frontend code</li>
+              <li>Debugged and identified problems in a large/complex code base that improved problem solving techniques</li>
+            </ul>
 
 # Front Desk Attendant
-- company: Simpson Lazer Tag
-  position: Front Desk Attendant
-  duration:   Jun, 1975  &mdash; May, 1978
-  summary: Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.
+- company: Young Life Leader
+  position: Co-leadership Role
+  duration: Fall 2013 &mdash; present
+  summary: I volunteer with local high school students as a mentor for about 5 to 10 hours per week.
