--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,15 +2,21 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # donutfinder.io
-- project: donutfinder.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+- project: nflarreststats
+  role: Final team project for Introduction to Artifical Intelegence
+  #duration: 2012 &mdash; Present
   # url: "#"
-  description: Donut Locator is an open source node/ember app that lets users find donuts within a defined radius from their home.
+  description: nalysed NFL players and teams as a network to shed light on criminal activity. Found that there is a high betweenness in some of the NFL teams, meaning that some teams have a higher tolerance for crime.
 
 #Springfield Donut Eater's User Group
-- project: Springfield Donut Eater's User Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
+- project: PBAutoRespond
+  role: Side project
+  #duration: 2007 &mdash; Present
   # url: "#"
-  description: DEUG is a local monthly meetup in Springfield where we share all the latest tips and tricks for dat donut lifestyle. I organize the group, and typically eat most of the donuts.
+  description: Python script that allows PushBullet users to set away text messages using PushBullet's API.
+
+- project: Viola-Jones for Video
+  role: Reasearch project for MESS Lab
+  #duration: 2007 &mdash; Present
+  # url: "#"
+  description: Used an implementation of the Viola-Jones algorithm and applied it to a video stream using OpenCV. I am in the process of converting this multi-threaded architecture, implemented on Windows and Linux, to use Cuda threads.
