--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,8 @@
 # Skills
-# Donut design
-- skill: Donut design
-  description: Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research
+- skill: Technical Overview
+  description: <ul class="resume-item-list">
+                <li>Skilled in C, C++, C#, Java, Python, Git, and TFS</li>
+                <li>Experience with OpenCV, Cuda, Pandas, scikit-learn, and multi-threaded application design</li>
+                <li>Built and problem-solved computers with different operating systems including Windows, Linux and macOS</li>
+                </ul>
 
-# Craft beer brewing
-- skill: Craft beer brewing
-  description: Hops inspection, brew testing, distribution management, bottle label design, festival and event management
-
-# Family leadership
-- skill: Family leadership
-  description: Bread winning, conflict resolution, couch inspection, TV longevity testing
