added link to my resume PDF

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
 - url: "http://www.dejazzer.com/students.html"
   description: Marquette Embedded SystemS Lab
-- url: "#"
+- url: "https://github.com/bkupz/resume/blob/master/BrandonKupczyk.pdf"
   description: PDF Resume!!!
