--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,4 +2,4 @@
 - url: "http://www.dejazzer.com/students.html"
   description: Marquette Embedded SystemS Lab
 - url: "https://github.com/bkupz/resume/blob/master/BrandonKupczyk.pdf"
-  description: PDF Resume!!!
+  description: PDF Resume
