--- a/notes/couscous.yml
+++ b/notes/couscous.yml
@@ -15,18 +15,16 @@ scripts:
 
 
 sidebar:
-    - title: About mintlook
+    - title: Brandon's Notes
     - subtitle: Links
-    - text: Example
-      link: /example.html
-    - text: Mintlook and Couscous
-      page: / # relative link
+    - text: github
+      page: https://github.com/bkupz/
     - line: true
     - html: |
-            <p>Follow us on <a href="http://kupczyk.me">Main Site</a>, <a href="http://instagram.com">Instagram</
+            <p>Links: <a href="http://kupczyk.me">Main Site</a>, <a href="https://www.instagram.com/bkupz/">Instagram</a></p>
 
 footer: |
-    <p>Hello <strong>World</strong></
+    <p>Brandon Kupczyk - 2018 -</p>
 #
 #languages: ["en", "de"] # List of supported languages. Comment out to disable language selection.
 #defaultLanguage: world  # Default language icon, and the value of the html lang attribute. It is recommended to set this even (especially) if you're not using language selection.
