--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 # Springfield Nuclear Power Plant
 - company: Marquette Embedded SystemS Lab
   position: Undergraduate Researcher
-  duration: Jun, 2017 &mdash; present
+  duration: Jun, 2017 &mdash; May, 2018
   summary:  <ul class="resume-item-list">
               <li>Utilized OpenCV to parse a video stream and applied the Viola-Jones computer vision algorithm to each frame via a parallelized architecture</li>
               <li>Attaining in-depth knowledge of the C++ and Cuda languages</li>
@@ -22,6 +22,6 @@
 # Front Desk Attendant
 - company: Young Life Leader
   position: Co-leadership Role
-  duration: Fall 2013 &mdash; present
+  duration: Fall 2013 &mdash; May, 2019
   summary: I volunteer with local high school students as a mentor for about 5 to 10 hours per week.
 
