--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Outdoor enthusiast & Vice President of the Marquette Rock Climbing Club
+- description: I love to rock climb and ski tour!
 #- description: Grand Funk Railroad.
 #- description: Flanders' lawnmower.
